11 October 2009
    New Features:
        A Stored Tags dialog that shows the current tags of the selected file as stored on disk. Useful for when editing libraries and the tag differs from the tag on disk.
        I added an option to allow retrieval of duplicates via a specific tag. This can speed things up for some searches.
    Fixes:
        There were a lot but the major ones are:
        Duplicates can retrieve more than 300 at a time. (My fault for not checking.)
        Musicbrainz now works for all cases (it gave an error when retrieving via 'album').
        There ain't no more barfing of errors while editing text in the pattern combo.
        Reloading works again (didn't even know it was broken).
    Changes:	
	    Instead of changing the background colour of a row, the Musicbrainz dialog now just bold the text that's to be written.

9 September 2009 (0.7.8)
    New Features:
        A duplicates finder, which is super useful. It's not as well tested as I'd like so I'll make that a priority for the next release.
        Rudimentary file-editing support had been added to the filesystem view.
        Bugs were fixed where needed (I seriously need to remember to log this stuff)
        Note that I haven't added any progress bars for these features (due in a week) so just have patience when using them (and keep an eye on the command line for errors).
    Changes:
        I've changed the config system to use ConfigObj as PyQt4's too buggy and Python's built in library too sucky.
   
    The website looks a lot better.

4 June 2009 (0.7.0)
    New Features:
        Loading times are improved by a couple of miliseconds.
        Showing duplicates can now be slightly fuzzy by adding : in front of the tag that's to be used.
        Added an :artist fuzzy compare listing to the libary view.
    Fixes:
        Sorting or doing anything else while some rows are higlighted is fixed.
        Other little stuff that I can't remember.
    Changes: