@@ -1,4 +1,4 @@
-# -*- coding: utf-8 -*-
+#!/usr/bin/env python
 #console.py
 
 #Copyright (C) 2008-2009 concentricpuddle
